@@ -130,7 +130,7 @@ class ZMSession extends ZMObject {
      *
      * @return char The session type.
      */
-    public function getType() { return array_key_exists('account_type', $_SESSION) ? $_SESSION['account_type'] : ZMAccounts::ANONYMOUS; }
+    public function getType() { return array_key_exists('account_type', $_SESSION) ? $_SESSION['account_type'] : ZMSacsMapper::ANONYMOUS; }
 
     /**
      * Returns <code>true</code> if the user is not logged in at all.
@@ -139,7 +139,7 @@ class ZMSession extends ZMObject {
      *
      * @return boolean <code>true</code> if the current user is anonymous, <code>false</code> if not.
      */
-    public function isAnonymous() { return !array_key_exists('account_type', $_SESSION) || ZMAccounts::ANONYMOUS == $_SESSION['account_type']; }
+    public function isAnonymous() { return !array_key_exists('account_type', $_SESSION) || ZMSacsMapper::ANONYMOUS == $_SESSION['account_type']; }
 
     /**
      * Returns <code>true</code> if the user is a guest user.
@@ -148,7 +148,7 @@ class ZMSession extends ZMObject {
      *
      * @return boolean <code>true</code> if the current user is an guest, <code>false</code> if not.
      */
-    public function isGuest() { return array_key_exists('account_type', $_SESSION) && ZMAccounts::GUEST == $_SESSION['account_type']; }
+    public function isGuest() { return array_key_exists('account_type', $_SESSION) && ZMSacsMapper::GUEST == $_SESSION['account_type']; }
 
     /**
      * Returns <code>true</code> if the user is a registered user.
@@ -157,7 +157,7 @@ class ZMSession extends ZMObject {
      *
      * @return boolean <code>true</code> if the current user is registered, <code>false</code> if not.
      */
-    public function isRegistered() { return array_key_exists('account_type', $_SESSION) && ZMAccounts::REGISTERED == $_SESSION['account_type']; }
+    public function isRegistered() { return array_key_exists('account_type', $_SESSION) && ZMSacsMapper::REGISTERED == $_SESSION['account_type']; }
 
     /**
      * Set the account for the current session.
