@@ -32,11 +32,6 @@
  * @version $Id$
  */
 class ZMAccounts extends ZMObject {
-    // account type constants
-    const REGISTERED = 'registered';
-    const GUEST = 'guest';
-    const ANONYMOUS = 'anonymous';
-
     // authorization status constants
     const AUTHORIZATION_ENABLED = 0;
     const AUTHORIZATION_PENDING = 1;
