@@ -25,7 +25,7 @@ class TestZMAccounts extends ZMTestCase {
             'NewsletterSubscriber' => false,
             'GlobalProductSubscriber' => true,
             'SubscribedProducts' => null,
-            'Type' => ZMAccounts::REGISTERED,
+            'Type' => ZMSacsMapper::REGISTERED,
             'PriceGroupId' => 0,
     );
 
@@ -120,10 +120,10 @@ class TestZMAccounts extends ZMTestCase {
     public function testGetAccountsForEmail() {
         // gets us at least two guest accounts
         $account1 = $this->createAccount($this->accountData1);
-        $account1->setType(ZMAccounts::GUEST);
+        $account1->setType(ZMSacsMapper::GUEST);
         $account1 = ZMAccounts::instance()->createAccount($account1);
         $account2 = $this->createAccount($this->accountData1);
-        $account2->setType(ZMAccounts::GUEST);
+        $account2->setType(ZMSacsMapper::GUEST);
         $account2 = ZMAccounts::instance()->createAccount($account2);
 
         $accounts = ZMAccounts::instance()->getAccountsForEmailAddress($account2->getEmail());
