@@ -33,7 +33,7 @@
 <p><?php zm_l10n("Dear %s %s,", $zm_account->getFirstName(), $zm_account->getLastName()) ?></p>
 
 <p><?php zm_l10n("This is to inform you that your order #%s has been updated.", $zm_order->getId()) ?></p>
-<?php if (ZMAccounts::REGISTERED == $zm_account->getType()) {
+<?php if (ZMSacsMapper::REGISTERED == $zm_account->getType()) {
     $href = '<a href="'.$net->url(FILENAME_ACCOUNT_HISTORY_INFO, 'order_id='.$zm_order->getId(), false, false).'">'.zm_l10n_get("order #%s", $zm_order->getId()).'</a>';
 } else {
     $href = '<a href="'.$net->url('guest_history', '', false, false).'">'.zm_l10n_get("order #%s", $zm_order->getId()).'</a>';
